# Merchant

./: CMakeLists.txt  readme.md
asset/: Shop.tmx  customer_dialogue.xml  items.xml  market_trends.xml
asset/animations/: customer_animations.xml  fox_animations.xml
src/: Game.cpp  Game.h  Items.cpp  Items.h  Map.cpp  TextureManager.cpp  TextureManager.h  main.cpp  map.h
src/ecs/: Components.h  World.h
src/ecs/event/: AudioEventQueue.h  BaseEvent.h  EventManager.h
src/ecs/system/: AnimationSystem.h  CollisionSystem.cpp  CollisionSystem.h  CustomerAISystem.cpp  CustomerAISystem.h  CustomerDialogueSystem.cpp  CustomerDialogueSystem.h  CustomerSpawnSystem.h  CustomerSpawnerSystem.cpp  CustomerSpawnerSystem.h  DayCycleSystem.cpp  DayCycleSystem.h  DebtSystem.cpp  DebtSystem.h  DestructionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  HUDSystem.h  HaggleSystem.cpp  HaggleSystem.h  KeyboardInputSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MarketTrendSystem.cpp  MarketTrendSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  PathfindingSystem.cpp  PathfindingSystem.h  PreRenderSystem.h  RenderSystem.h  ReputationSystem.cpp  ReputationSystem.h  ResultMenuSystem.h  ResultMenuSystem.h.cpp  TransactionSystem.cpp  TransactionSystem.h  UIRenderSystem.h
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  SceneManager.h  UIVisibilityManager.cpp  UIVisibilityManager.h
src/scene/: Scene.cpp  Scene.h  SceneDisplayCase.cpp  SceneType.h  SceneUI.cpp
src/scene/UI/: BaseUI.cpp  BaseUI.h  DaySummaryUI.cpp  DaySummaryUI.h  DialogueUI.cpp  DialogueUI.h  HaggleUI.cpp  HaggleUI.h  HudUI.cpp  HudUI.h  InventoryUI.cpp  InventoryUI.h  OrderUI.cpp  OrderUI.h
src/utils/: Collision.cpp  Collision.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
